Fix double-scrollbar when in fullscreen (#4243)

--- a/client/app/assets/less/inc/base.less
+++ b/client/app/assets/less/inc/base.less
@@ -25,8 +25,10 @@ body {
     position: relative;
     
     &.headless {
-        padding-top: 10px;
-        
+        app-view {
+            padding-top: 10px;
+        }
+
         .nav.app-header, .navbar {
             display: none;
         }
